--- a/App.xaml
+++ b/App.xaml
@@ -5,6 +5,7 @@
              StartupUri="WPF/SignInForm.xaml">
     <Application.Resources>
         <ResourceDictionary>
+        <BitmapImage x:Key="NoImageIcon" UriSource="Resources/Images/Icons/no_image_icon.png"/>
         <BitmapImage x:Key="TimeIcon" UriSource="Resources/Images/Icons/time-icon.png"/>
         <BitmapImage x:Key="ScheduledIcon" UriSource="Resources/Images/Icons/scheduled-icon.png"/>
         <BitmapImage x:Key="CancelIcon" UriSource="Resources/Images/Icons/cancel-icon.png"/>
