--- a/WPF/Tablet/Views/FinishedToursPage.xaml
+++ b/WPF/Tablet/Views/FinishedToursPage.xaml
@@ -21,9 +21,11 @@
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
             <RowDefinition/>
         </Grid.RowDefinitions>
-        <Border Grid.Row="0" Height="180" BorderBrush="Black" BorderThickness="1" Margin="5,20,5,5">
+        <TextBlock Grid.Row="0" HorizontalAlignment="Center" VerticalAlignment="Bottom" FontSize="28" Margin="0 20 0 0">Finished Tours</TextBlock>
+        <Border Grid.Row="1" Height="180" BorderBrush="Black" BorderThickness="1" Margin="5">
             <Grid>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="Auto"/>
@@ -61,7 +63,7 @@ ItemsSource="{Binding languageDTOs}" SelectedItem="{Binding selectedLanguageDTO}
                 <Button Grid.Column="4" Grid.RowSpan="2" Grid.Row="0"  x:Name="filterButton" Content="Filter" Command="cmd:RoutedCommands.Filter" Style="{StaticResource FilterButton}"/>
             </Grid>
         </Border>
-        <ScrollViewer Grid.Row="1" VerticalScrollBarVisibility="Auto">
+        <ScrollViewer Grid.Row="2" VerticalScrollBarVisibility="Auto">
             <ItemsControl x:Name="itemsControlScheduledTours" ItemsSource="{Binding tourDTOs}">
                 <ItemsControl.ItemTemplate>
                     <DataTemplate>
