--- a/WPF/Tablet/Views/FollowLiveTourPage.xaml
+++ b/WPF/Tablet/Views/FollowLiveTourPage.xaml
@@ -22,9 +22,11 @@
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
             <RowDefinition/>
         </Grid.RowDefinitions>
-        <Border Grid.Row="0" Height="180" BorderBrush="Black" BorderThickness="1" Margin="5,20,5,5">
+        <TextBlock Grid.Row="0" HorizontalAlignment="Center" VerticalAlignment="Bottom" FontSize="28" Margin="0 20 0 0">Follow Live Tour</TextBlock>
+        <Border Grid.Row="1" Height="180" BorderBrush="Black" BorderThickness="1" Margin="5">
             <Grid>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="Auto"/>
@@ -58,7 +60,7 @@
                 <Button Grid.Column="3" Grid.Row="2"  x:Name="filterButton" Content="Filter" Command="cmd:RoutedCommands.Filter" Style="{StaticResource FilterButton}"/>
             </Grid>
         </Border>
-        <ScrollViewer Grid.Row="1" VerticalScrollBarVisibility="Auto">
+        <ScrollViewer Grid.Row="2" VerticalScrollBarVisibility="Auto">
             <ItemsControl x:Name="itemsControlLiveTours" ItemsSource="{Binding tourDTOs}">
                 <ItemsControl.ItemTemplate>
                     <DataTemplate>
