--- a/WPF/Tablet/Views/LiveTourPage.xaml
+++ b/WPF/Tablet/Views/LiveTourPage.xaml
@@ -23,16 +23,18 @@
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
             <RowDefinition Height="*"/>
             <RowDefinition Height="0.2*"/>
         </Grid.RowDefinitions>
-        <Border Grid.Column="0" Grid.Row="0" Margin="20" BorderBrush="Black" BorderThickness="1">
+        <TextBlock Grid.Row="0" Grid.ColumnSpan="2" HorizontalAlignment="Center" VerticalAlignment="Bottom" FontSize="28" Margin="0 10 0 0">Live Tour</TextBlock>
+        <Border Grid.Column="0" Grid.Row="1" Margin="20" BorderBrush="Black" BorderThickness="1">
             <Border.Background>
                 <ImageBrush ImageSource="{Binding tourDTO.ProfilePictures[0]}"/>
             </Border.Background>
         </Border>
-        <Grid Grid.Row="0" Grid.Column="1">
+        <Grid Grid.Row="1" Grid.Column="1">
             <Grid.RowDefinitions>
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="*"/>
@@ -46,7 +48,7 @@
             <TextBlock Grid.Row="3" Grid.Column="1" Margin="10" Text="{Binding tourDTO.CurrentTouristNumber, StringFormat=Tourists: {0}}" FontSize="18"/>
             <TextBlock Grid.Row="4" Grid.Column="1" Margin="10" Text="{Binding tourDTO.Duration, StringFormat=Duration: {0} hours}" FontSize="18"/>
         </Grid>
-        <DockPanel Grid.Row="1" Grid.Column="0">
+        <DockPanel Grid.Row="2" Grid.Column="0">
             <Label DockPanel.Dock="Top" Content="Description:" Style="{StaticResource PageLabel}"/>
             <Border BorderBrush="Black" BorderThickness="1" Background="{StaticResource Beige}" Padding="5" Margin="10,0,10,10">
                 <ScrollViewer>
@@ -54,7 +56,7 @@
                 </ScrollViewer>
             </Border>
         </DockPanel>
-        <Grid Grid.Row="1" Grid.Column="1" Margin="10">
+        <Grid Grid.Row="2" Grid.Column="1" Margin="10">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"/>
                 <RowDefinition />
@@ -73,6 +75,6 @@
             </Grid>
             <Button x:Name="checkButton" Grid.Row="2" Content="Check Next Keypoint" Style="{StaticResource FilterButton}" Command="cmd:RoutedCommands.AddPointOfInterest"/>
         </Grid>
-        <Button Grid.ColumnSpan="2" Grid.Row="2" x:Name="finishButton" Content="Finish" Style="{StaticResource BigButtons}" Command="cmd:RoutedCommands.Confirm"/>
+        <Button Grid.ColumnSpan="2" Grid.Row="3" x:Name="finishButton" Content="Finish" Style="{StaticResource BigButtons}" Command="cmd:RoutedCommands.Confirm"/>
     </Grid>
 </Page>
