--- a/WPF/Tablet/Views/ScheduledToursPage.xaml
+++ b/WPF/Tablet/Views/ScheduledToursPage.xaml
@@ -14,6 +14,7 @@
     <Page.CommandBindings>
         <CommandBinding x:Name="Clear" Command="cmd:RoutedCommands.Clear" CanExecute="Clear_CanExecute" Executed="Clear_Executed"/>
         <CommandBinding x:Name="Filter" Command="cmd:RoutedCommands.Filter" CanExecute="Filter_CanExecute" Executed="Filter_Executed"/>
+        <CommandBinding x:Name="Pdf_Report" Command="cmd:RoutedCommands.Stats" CanExecute="Pdf_Report_CanExecute" Executed="Pdf_Report_Executed"/>
     </Page.CommandBindings>
     <Page.Resources>
         <ResourceDictionary Source="../TabletStyles.xaml">
@@ -23,9 +24,17 @@
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
             <RowDefinition/>
         </Grid.RowDefinitions>
-        <Border Grid.Row="0" Height="180" BorderBrush="Black" BorderThickness="1" Margin="5,20,5,5">
+        <TextBlock Grid.Row="0" HorizontalAlignment="Center" VerticalAlignment="Bottom" FontSize="28" Margin="0 20 0 0">Scheduled Tours</TextBlock>
+        <Button VerticalAlignment="Bottom" HorizontalAlignment="Right" Margin="0 0 40 0" Width="110" Style="{StaticResource MainPageButton}" Command="cmd:RoutedCommands.Stats">
+            <StackPanel Orientation="Horizontal" Margin="0">
+                <Image Source="{StaticResource DocumentIcon}" Width="20" Height="20" Margin="0 0 0 0"/>
+                <Label Style="{StaticResource MainPageLabel}">PDF report</Label>
+            </StackPanel>
+        </Button>
+        <Border Grid.Row="1" Height="180" BorderBrush="Black" BorderThickness="1" Margin="5">
             <Grid>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="Auto"/>
@@ -67,7 +76,7 @@
                 <Button Grid.Column="5" Grid.Row="2"  x:Name="filterButton" Content="Filter" Command="cmd:RoutedCommands.Filter" Style="{StaticResource FilterButton}"/>
             </Grid>
         </Border>
-        <ScrollViewer Grid.Row="1" VerticalScrollBarVisibility="Auto">
+        <ScrollViewer Grid.Row="2" VerticalScrollBarVisibility="Auto">
             <ItemsControl x:Name="itemsControlScheduledTours" ItemsSource="{Binding tourDTOs}">
                 <ItemsControl.ItemTemplate>
                     <DataTemplate>
