--- a/WPF/Tablet/Views/TourPage.xaml
+++ b/WPF/Tablet/Views/TourPage.xaml
@@ -23,16 +23,18 @@
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
             <RowDefinition Height="*"/>
             <RowDefinition Height="0.2*"/>
         </Grid.RowDefinitions>
-        <Border Grid.Column="0" Grid.Row="0" Margin="20" BorderBrush="Black" BorderThickness="1">
+        <TextBlock Grid.Row="0" Grid.ColumnSpan="2" HorizontalAlignment="Center" VerticalAlignment="Bottom" FontSize="28" Margin="0 10 0 0">Scheduled Tour</TextBlock>
+        <Border Grid.Column="0" Grid.Row="1" Margin="20" BorderBrush="Black" BorderThickness="1">
             <Border.Background>
                 <ImageBrush ImageSource="{Binding tourDTO.ProfilePictures[0]}"/>
             </Border.Background>
         </Border>
-        <Grid Grid.Row="0" Grid.Column="1">
+        <Grid Grid.Row="1" Grid.Column="1">
             <Grid.RowDefinitions>
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="*"/>
@@ -48,7 +50,7 @@
             <TextBlock Grid.Row="4" Grid.Column="1" Margin="10" Text="{Binding tourDTO.LanguageTemplate, StringFormat=Language: {0}}" FontSize="18"/>
             <TextBlock Grid.Row="5" Grid.Column="1" Margin="10" Text="{Binding tourDTO.Beggining, StringFormat=Beggining: {0}}" FontSize="18"/>
         </Grid>
-        <DockPanel Grid.Row="1" Grid.Column="0">
+        <DockPanel Grid.Row="2" Grid.Column="0">
             <Label DockPanel.Dock="Top" Content="Description:" Style="{StaticResource PageLabel}"/>
             <Border BorderBrush="Black" BorderThickness="1" Background="{StaticResource Beige}" Padding="5" Margin="10,0,10,10">
                 <ScrollViewer>
@@ -56,7 +58,7 @@
                 </ScrollViewer>
             </Border>
         </DockPanel>
-        <Grid Grid.Row="1" Grid.Column="1" Margin="10">
+        <Grid Grid.Row="2" Grid.Column="1" Margin="10">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"/>
                 <RowDefinition />
@@ -74,7 +76,7 @@
                 </DataGrid>
             </Grid>
         </Grid>
-        <Button Grid.Column="0" Grid.Row="2" x:Name="closeButton" Style="{StaticResource BigButtons}" Content="Close" Command="cmd:RoutedCommands.Cancel"/>
-        <Button Grid.Column="1" Grid.Row="2" x:Name="deletehButton" Style="{StaticResource BigButtons}" Content="Delete" Command="cmd:RoutedCommands.Confirm"/>
+        <Button Grid.Column="0" Grid.Row="3" x:Name="closeButton" Style="{StaticResource BigButtons}" Content="Close" Command="cmd:RoutedCommands.Cancel"/>
+        <Button Grid.Column="1" Grid.Row="3" x:Name="deletehButton" Style="{StaticResource BigButtons}" Content="Delete" Command="cmd:RoutedCommands.Confirm"/>
     </Grid>
 </Page>
