--- a/WPF/Desktop/Views/TouristMainWindow.xaml
+++ b/WPF/Desktop/Views/TouristMainWindow.xaml
@@ -3,10 +3,12 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:local="clr-namespace:BookingApp.WPF.Desktop.Views"
         mc:Ignorable="d"
         Title="TouristMainWindow"
         WindowStartupLocation="CenterScreen">
     <Window.Resources>
+        <BlurEffect x:Key="BlurEffect" Radius="10"/>
         <Style TargetType="Button" x:Key="ButtonStyle">
             <Setter Property="Background" Value="{StaticResource HardGreen}"/>
             <Setter Property="Foreground" Value="{StaticResource Beige}"/>
@@ -105,7 +107,8 @@
                         </StackPanel>
                     </Button>
                     <Button x:Name="TutorialButton"
-                            Style="{StaticResource ButtonStyle}">
+                            Style="{StaticResource ButtonStyle}"
+                            Click="TutorialButton_Click">
                         <StackPanel Orientation="Horizontal">
                             <Image Source="{StaticResource BeigeHelp}"
                                    Height="35"
@@ -116,9 +119,38 @@
                     </Button>
                 </StackPanel>
             </Grid>
-            <Frame Grid.Column="1" 
-                   x:Name="PageFrame"
-                   NavigationUIVisibility="Hidden"/>
+            <Grid Grid.Column="1">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="0.25*"/>
+                    <ColumnDefinition Width="0.75*"/>
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="0.25*"/>
+                    <RowDefinition Height="0.75*"/>
+                </Grid.RowDefinitions>
+                <Frame Grid.ColumnSpan="2"
+                       Grid.RowSpan="2"
+                       x:Name="PageFrame"
+                       NavigationUIVisibility="Hidden"/>
+                <Button    x:Name="X"
+                           Content="X"
+                           Width="50"
+                           Height="50"
+                           Grid.Column="1"
+                           VerticalAlignment="Bottom"
+                           HorizontalAlignment="Right"
+                           FontSize="32"
+                           Visibility="Hidden"
+                           Foreground="{StaticResource Beige}"
+                           Background="{StaticResource Green}"
+                           Cursor="Hand"
+                           Click="X_MouseLeftButtonDown"/>
+                <ContentControl           Grid.Column="1"
+                                          Grid.Row="1"
+                                          Visibility="Hidden"
+                                          x:Name="tutorial"/>
+            </Grid>
+            
         </Grid>
     </Border>
 </Window>
