--- a/WPF/SignInForm.xaml
+++ b/WPF/SignInForm.xaml
@@ -5,16 +5,15 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:BookingApp.WPF"
         mc:Ignorable="d"
-        Title="Sign in" Height="250" Width="450" WindowStartupLocation="CenterScreen" ResizeMode="NoResize">
+        Title="Sign in" Height="280" Width="550" WindowStartupLocation="CenterScreen" ResizeMode="NoResize">
     <Grid Background="{StaticResource Green}">
 
         <Grid.RowDefinitions>
-            <RowDefinition></RowDefinition>
-            <RowDefinition Height="150"></RowDefinition>
+            <RowDefinition Height="180"></RowDefinition>
             <RowDefinition Height="60"></RowDefinition>
         </Grid.RowDefinitions>
 
-        <Grid Grid.Row="1" Grid.Column="0" Width="300" Height="100">
+        <Grid Grid.Row="0" Grid.Column="0" Width="300" Height="100" Margin="0 30 180 0">
             <Grid.RowDefinitions>
                 <RowDefinition></RowDefinition>
                 <RowDefinition></RowDefinition>
@@ -29,8 +28,10 @@
             <TextBox Grid.Row="0" Grid.Column="1" Text="{Binding Username, Mode=OneWayToSource}" Height="25" TextWrapping="Wrap" VerticalAlignment="Center" VerticalContentAlignment="Center"/>
             <PasswordBox x:Name="passwordBox" Grid.Row="1" Grid.Column="1" Height="25" VerticalAlignment="Center" VerticalContentAlignment="Center"/>
         </Grid>
-        
-        <Button Grid.Row="2" Click="SignIn" Content="Sign in" HorizontalAlignment="Center" VerticalAlignment="Center" Height="30" Width="80" 
+
+        <Image Source="{StaticResource BeigeLogo}" Margin="340,10,10,40" Width="180" Height="180" Grid.RowSpan="2"/>
+
+        <Button Grid.Row="1" Click="SignIn" Content="Sign in" HorizontalAlignment="Center" VerticalAlignment="Center" Height="30" Width="80" 
                 Background="{StaticResource SoftGreen}"
                 FontSize="14"
                 FontWeight="DemiBold"/>
